v1.13 Nueva BD
Cambios en la Base de datos, y arreglos en codigo de carga de imagenes y log implementado en todas partes