@@ -21,6 +21,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
@@ -70,7 +71,6 @@ public class FrPs2 extends javax.swing.JFrame {
         getLayeredPane().add(fondo, JLayeredPane.FRAME_CONTENT_LAYER);
         fondo.setBounds(0, 0, MyImgCustom.getIconWidth(), MyImgCustom.getIconHeight());
         
-        jMenuItem1.setVisible(ApliJuegos.Update); 
     }
 
     public void Limpiar() {
@@ -124,10 +124,10 @@ public class FrPs2 extends javax.swing.JFrame {
             codi=GenerCodigo();
         }
         if (txtRuta.getText().length() > 0) {
-            archivos.CopiarArchivos(txtRuta.getText(), System.getProperties().getProperty("user.dir")+"/IMG/PS2/"+codi.trim()+".jpg");
+            archivos.CopiarArchivos(txtRuta.getText(), System.getProperties().getProperty("user.dir")+"/IMG/PS2/"+codi.trim()+".");
             clPs2 = new ClPs2(codi.trim(), txtNombre.getText().trim(), txtRegion.getText().trim(), txtIdiomas.getText().trim(), jsJugadores.getValue().hashCode(), txtDisco.getText().trim() + " " + capasid, txtRuta.getText());
         } else {
-            String ruta = "./src/Cl/Burgos/Juegos/IMG/PS2.png";
+            String ruta = "./src/Cl/Burgos/Juegos/IMG/PS2.jpg";
             clPs2 = new ClPs2(codi.trim(), txtNombre.getText().trim(), txtRegion.getText().trim(), txtIdiomas.getText().trim(), jsJugadores.getValue().hashCode(), txtDisco.getText().trim() + " " + capasid, ruta);
         }
         return clPs2;
@@ -194,13 +194,17 @@ public class FrPs2 extends javax.swing.JFrame {
             fila[6] = lista.get(i).getDisco();
             try {
                 String urlImagen = System.getProperties().getProperty("user.dir")+"/IMG/PS2/"+lista.get(i).getCodigo()+".jpg";
-                ImageIcon icon = new ImageIcon(urlImagen);
-                ImageIcon imgi = new ImageIcon(icon.getImage().getScaledInstance(120,60,Image.SCALE_DEFAULT)); 
-//                byte[] bi = lista.get(i).getImagen();
-//                BufferedImage image = null;
-//                image = ImageIO.read(new ByteArrayInputStream(bi));
-//                ImageIcon imgi = new ImageIcon(image.getScaledInstance(120, 60, 0));
-                fila[7] = new JLabel(imgi);
+                File archivo = new File(urlImagen);
+                if (!archivo.exists()) {
+                    String ruta = "./src/Cl/Burgos/Juegos/IMG/Sin Imagen.jpg";
+                    ImageIcon icon = new ImageIcon(ruta);
+                    ImageIcon imgi = new ImageIcon(icon.getImage().getScaledInstance(120,60,Image.SCALE_DEFAULT)); 
+                    fila[7] = new JLabel(imgi);
+                }else{
+                    ImageIcon icon = new ImageIcon(urlImagen);
+                    ImageIcon imgi = new ImageIcon(icon.getImage().getScaledInstance(120,60,Image.SCALE_DEFAULT)); 
+                    fila[7] = new JLabel(imgi);
+                }
 
             } catch (Exception ex) {
                 fila[7] = new JLabel("No imagen");
@@ -267,14 +271,17 @@ public class FrPs2 extends javax.swing.JFrame {
             fila[6]=lista.get(i).getDisco();
             try{
                 String urlImagen = System.getProperties().getProperty("user.dir")+"/IMG/PS2/"+lista.get(i).getCodigo()+".jpg";
-                ImageIcon icon = new ImageIcon(urlImagen);
-                ImageIcon imgi = new ImageIcon(icon.getImage().getScaledInstance(60,60,Image.SCALE_DEFAULT)); 
-//                    byte[] bi = lista.get(i).getImagen();
-//                    BufferedImage image = null;
-//                    InputStream in = new ByteArrayInputStream(bi);
-//                    image = ImageIO.read(in);
-//                    ImageIcon imgi = new ImageIcon(image.getScaledInstance(60, 60, 0));
+                File archivo = new File(urlImagen);
+                if (!archivo.exists()) {
+                    String ruta = "./src/Cl/Burgos/Juegos/IMG/Sin Imagen.jpg";
+                    ImageIcon icon = new ImageIcon(ruta);
+                    ImageIcon imgi = new ImageIcon(icon.getImage().getScaledInstance(120,60,Image.SCALE_DEFAULT)); 
                     fila[7] = new JLabel(imgi);
+                }else{
+                    ImageIcon icon = new ImageIcon(urlImagen);
+                    ImageIcon imgi = new ImageIcon(icon.getImage().getScaledInstance(120,60,Image.SCALE_DEFAULT)); 
+                    fila[7] = new JLabel(imgi);
+                }
 
                 }catch(Exception ex){
                     fila[7] = new JLabel("No imagen");
@@ -333,7 +340,6 @@ public class FrPs2 extends javax.swing.JFrame {
         jMenuBar1 = new javax.swing.JMenuBar();
         jMenu1 = new javax.swing.JMenu();
         jMenu2 = new javax.swing.JMenu();
-        jMenuItem1 = new javax.swing.JMenuItem();
         jMenu3 = new javax.swing.JMenu();
         jMenuItem3 = new javax.swing.JMenuItem();
         jMenuItem4 = new javax.swing.JMenuItem();
@@ -608,17 +614,6 @@ public class FrPs2 extends javax.swing.JFrame {
         jMenu2.setBorder(javax.swing.BorderFactory.createLineBorder(new java.awt.Color(0, 0, 0)));
         jMenu2.setText("Ayuda");
 
-        jMenuItem1.setAccelerator(javax.swing.KeyStroke.getKeyStroke(java.awt.event.KeyEvent.VK_A, java.awt.event.InputEvent.ALT_MASK));
-        jMenuItem1.setFont(new java.awt.Font("Segoe UI", 0, 18)); // NOI18N
-        jMenuItem1.setIcon(new javax.swing.ImageIcon(getClass().getResource("/Cl/Burgos/Juegos/IMG/Update.png"))); // NOI18N
-        jMenuItem1.setText("Actualizacion");
-        jMenuItem1.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem1ActionPerformed(evt);
-            }
-        });
-        jMenu2.add(jMenuItem1);
-
         jMenu3.setIcon(new javax.swing.ImageIcon(getClass().getResource("/Cl/Burgos/Juegos/IMG/Ayuda.png"))); // NOI18N
         jMenu3.setText("Contacto");
 
@@ -792,11 +787,31 @@ public class FrPs2 extends javax.swing.JFrame {
 
                     byte[] bi = datosCliente.get(i).getImagen();
                     BufferedImage image = null;
-                    InputStream in = new ByteArrayInputStream(bi);
-                    image = ImageIO.read(in);
-                    ImageIcon imgi = new ImageIcon(image.getScaledInstance(lblImgen.getWidth(), lblImgen.getHeight(), Image.SCALE_DEFAULT));
-                    this.lblImgen.setText("");
-                    this.lblImgen.setIcon(imgi);
+
+                    try {
+                        if (bi != null && bi.length > 0) {
+                            InputStream in = new ByteArrayInputStream(bi);
+                            image = ImageIO.read(in);
+                        } else {
+                            // Cargar imagen por defecto desde ruta local
+                            image = ImageIO.read(new File("./src/Cl/Burgos/Juegos/IMG/Sin Imagen.jpg"));
+                        }
+
+                        if (image != null) {
+                            ImageIcon imgi = new ImageIcon(image.getScaledInstance(
+                                lblImgen.getWidth(), lblImgen.getHeight(), Image.SCALE_SMOOTH));
+                            lblImgen.setIcon(imgi);
+                            lblImgen.setText("");
+                        } else {
+                            lblImgen.setIcon(null);
+                            lblImgen.setText("Imagen no disponible");
+                        }
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                        Log.log(e.getMessage());
+                        lblImgen.setIcon(null);
+                        lblImgen.setText("Error al cargar imagen");
+                    }
                 }
                 this.btnAgregar.setEnabled(false);
                 this.btnEliminar.setEnabled(true);
@@ -807,9 +822,9 @@ public class FrPs2 extends javax.swing.JFrame {
                 //                    this.btnActualizar.setLabel("Actualizar");
                 //                }
             } catch (Exception ex) {
-                //                Logger.getLogger(FrManteLogin.class.getName()).log(Level.SEVERE, null, ex);
+//                Logger.getLogger(FrPs2.class.getName()).log(Level.SEVERE, null, ex);
                 JOptionPane.showMessageDialog(null, ex.getMessage());
-                //                Log.log(ex.getMessage());
+                Log.log(ex.getMessage());
                 //                log.fatal(ex.getMessage());
             }
         }
@@ -829,17 +844,12 @@ public class FrPs2 extends javax.swing.JFrame {
         defineTablaPs2Buscar(clPs2);
     }//GEN-LAST:event_jButton4ActionPerformed
 
-    private void jMenuItem1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem1ActionPerformed
-        // TODO add your handling code here:
-        new FrUpdate().setVisible(true);
-        this.dispose();
-    }//GEN-LAST:event_jMenuItem1ActionPerformed
-
     private void jMenuItem3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem3ActionPerformed
         // TODO add your handling code here:
         URL url=null;
         try {
-            url = new URL("https://marchelo1989.github.io/");
+            URI uri = URI.create("https://marchelobm.github.io/");
+            url = uri.toURL();
             try {
                 Desktop.getDesktop().browse(url.toURI());
             } catch (IOException e) {
@@ -859,7 +869,8 @@ public class FrPs2 extends javax.swing.JFrame {
         // TODO add your handling code here:
         URL url=null;
         try {
-            url = new URL("https://api.whatsapp.com/send?phone=+56920473627");
+            URI uri = URI.create("https://api.whatsapp.com/send?phone=+56920473627");
+            url = uri.toURL();
             try {
                 Desktop.getDesktop().browse(url.toURI());
             } catch (IOException e) {
@@ -942,7 +953,6 @@ public class FrPs2 extends javax.swing.JFrame {
     private javax.swing.JMenu jMenu2;
     private javax.swing.JMenu jMenu3;
     private javax.swing.JMenuBar jMenuBar1;
-    private javax.swing.JMenuItem jMenuItem1;
     private javax.swing.JMenuItem jMenuItem3;
     private javax.swing.JMenuItem jMenuItem4;
     private javax.swing.JPanel jPanel1;
