@@ -21,9 +21,12 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.StringTokenizer;
 import javax.imageio.ImageIO;
 import javax.swing.ImageIcon;
@@ -69,7 +72,6 @@ public class FrPs3 extends javax.swing.JFrame {
         getLayeredPane().add(fondo, JLayeredPane.FRAME_CONTENT_LAYER);
         fondo.setBounds(0, 0, MyImgCustom.getIconWidth(), MyImgCustom.getIconHeight());
         
-        jMenuItem1.setVisible(ApliJuegos.Update); 
     }
 
     public void Limpiar() {
@@ -132,7 +134,6 @@ public class FrPs3 extends javax.swing.JFrame {
             clPs3 = new ClPs3(codi.trim(), txtNombre.getText().trim(), region, txtIdiomas.getText().trim(), jsJugadores.getValue().hashCode(), txtDisco.getText().trim() + " " + capasid, update, dlc, txtRuta.getText());
         } else {
             String ruta = "./src/Cl/Burgos/Juegos/IMG/PS3.jpg";
-            archivos.CopiarArchivos(ruta, System.getProperties().getProperty("user.dir")+"/IMG/PS3/"+codi.trim()+".jpg");
             clPs3 = new ClPs3(codi.trim(), txtNombre.getText().trim(), region, txtIdiomas.getText().trim(), jsJugadores.getValue().hashCode(), txtDisco.getText().trim() + " " + capasid, update, dlc, ruta);
         }
         return clPs3;
@@ -189,7 +190,7 @@ public class FrPs3 extends javax.swing.JFrame {
 //        DAOPc classCliente= new DAOPc();
         //LEEMOS LA CLASE CLIENTE MANDANDOLE LOS PARAMETROS
         //dAOClaves.leerClientesId(lngDesdeRegistro, (Long.valueOf(this.txtNumReg.getText())),tablaClientes,strBusqueda,idCliente);
-        List<ClPs3> lista = dAOPs3.leerPs3();
+        List<ClPs3> lista = Optional.ofNullable(dAOPs3.leerPs3()).orElse(new ArrayList<>());
         Object fila[] = new Object[10];
 //        String datos[]=new String [3];
         for (int i = 0; i < lista.size(); i++) {
@@ -360,7 +361,6 @@ public class FrPs3 extends javax.swing.JFrame {
         jMenuBar1 = new javax.swing.JMenuBar();
         jMenu1 = new javax.swing.JMenu();
         jMenu2 = new javax.swing.JMenu();
-        jMenuItem1 = new javax.swing.JMenuItem();
         jMenu3 = new javax.swing.JMenu();
         jMenuItem3 = new javax.swing.JMenuItem();
         jMenuItem4 = new javax.swing.JMenuItem();
@@ -677,17 +677,6 @@ public class FrPs3 extends javax.swing.JFrame {
         jMenu2.setBorder(javax.swing.BorderFactory.createLineBorder(new java.awt.Color(0, 0, 0)));
         jMenu2.setText("Ayuda");
 
-        jMenuItem1.setAccelerator(javax.swing.KeyStroke.getKeyStroke(java.awt.event.KeyEvent.VK_A, java.awt.event.InputEvent.ALT_MASK));
-        jMenuItem1.setFont(new java.awt.Font("Segoe UI", 0, 18)); // NOI18N
-        jMenuItem1.setIcon(new javax.swing.ImageIcon(getClass().getResource("/Cl/Burgos/Juegos/IMG/Update.png"))); // NOI18N
-        jMenuItem1.setText("Actualizacion");
-        jMenuItem1.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem1ActionPerformed(evt);
-            }
-        });
-        jMenu2.add(jMenuItem1);
-
         jMenu3.setIcon(new javax.swing.ImageIcon(getClass().getResource("/Cl/Burgos/Juegos/IMG/Ayuda.png"))); // NOI18N
         jMenu3.setText("Contacto");
 
@@ -872,11 +861,31 @@ public class FrPs3 extends javax.swing.JFrame {
 
                     byte[] bi = datosCliente.get(i).getImagen();
                     BufferedImage image = null;
-                    InputStream in = new ByteArrayInputStream(bi);
-                    image = ImageIO.read(in);
-                    ImageIcon imgi = new ImageIcon(image.getScaledInstance(lblImgen.getWidth(), lblImgen.getHeight(), Image.SCALE_DEFAULT));
-                    this.lblImgen.setText("");
-                    this.lblImgen.setIcon(imgi);               
+
+                    try {
+                        if (bi != null && bi.length > 0) {
+                            InputStream in = new ByteArrayInputStream(bi);
+                            image = ImageIO.read(in);
+                        } else {
+                            // Cargar imagen por defecto desde ruta local
+                            image = ImageIO.read(new File("./src/Cl/Burgos/Juegos/IMG/Sin Imagen.jpg"));
+                        }
+
+                        if (image != null) {
+                            ImageIcon imgi = new ImageIcon(image.getScaledInstance(
+                                lblImgen.getWidth(), lblImgen.getHeight(), Image.SCALE_SMOOTH));
+                            lblImgen.setIcon(imgi);
+                            lblImgen.setText("");
+                        } else {
+                            lblImgen.setIcon(null);
+                            lblImgen.setText("Imagen no disponible");
+                        }
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                        Log.log(e.getMessage());
+                        lblImgen.setIcon(null);
+                        lblImgen.setText("Error al cargar imagen");
+                    }              
                 }
                 
                 this.btnAgregar.setEnabled(false);
@@ -905,17 +914,12 @@ public class FrPs3 extends javax.swing.JFrame {
         defineTablaPs3Buscar(clPs3);
     }//GEN-LAST:event_jButton4ActionPerformed
 
-    private void jMenuItem1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem1ActionPerformed
-        // TODO add your handling code here:
-        new FrUpdate().setVisible(true);
-        this.dispose();
-    }//GEN-LAST:event_jMenuItem1ActionPerformed
-
     private void jMenuItem3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem3ActionPerformed
         // TODO add your handling code here:
         URL url=null;
         try {
-            url = new URL("https://marchelo1989.github.io/");
+            URI uri = URI.create("https://marchelobm.github.io/");
+            url = uri.toURL();
             try {
                 Desktop.getDesktop().browse(url.toURI());
             } catch (IOException e) {
@@ -935,7 +939,8 @@ public class FrPs3 extends javax.swing.JFrame {
         // TODO add your handling code here:
         URL url=null;
         try {
-            url = new URL("https://api.whatsapp.com/send?phone=+56920473627");
+            URI uri = URI.create("https://api.whatsapp.com/send?phone=+56920473627");
+            url = uri.toURL();
             try {
                 Desktop.getDesktop().browse(url.toURI());
             } catch (IOException e) {
@@ -1057,7 +1062,6 @@ public class FrPs3 extends javax.swing.JFrame {
     private javax.swing.JMenu jMenu2;
     private javax.swing.JMenu jMenu3;
     private javax.swing.JMenuBar jMenuBar1;
-    private javax.swing.JMenuItem jMenuItem1;
     private javax.swing.JMenuItem jMenuItem3;
     private javax.swing.JMenuItem jMenuItem4;
     private javax.swing.JPanel jPanel1;
